--- a/laravel/package.json
+++ b/laravel/package.json
@@ -12,7 +12,11 @@
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
+        "sweetalert2": "^11.6.14",
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "chart.js": "^4.0.1"
     }
 }
